--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -63,14 +63,15 @@
                 android:gravity="center"
                 android:textSize="18sp"/>
             <Button
-                android:id="@+id/btnReservar"
+                android:id="@+id/btnDetallesEditar"
                 android:layout_width="164dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="Reservar"
+                android:layout_marginBottom="8dp"
+                android:text="Editar"
                 android:textSize="16sp"
                 android:background="@drawable/button_fondo"
                 android:textColor="@drawable/button_texto"
