--- a/app/src/main/res/layout/fragment_producto_generico.xml
+++ b/app/src/main/res/layout/fragment_producto_generico.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -30,4 +30,14 @@
             android:layout_width="match_parent"
             android:layout_height="0dp" />
     </LinearLayout>
-</RelativeLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/btnAddProducto"
+        android:src="@drawable/ic_add"
+        android:layout_gravity="bottom|end"
+        android:tint="@color/primaryColor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp" />
+
+</android.support.design.widget.CoordinatorLayout>
