--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -66,28 +66,54 @@
                     android:layout_height="wrap_content"
                     android:textSize="18sp"
                     android:layout_marginBottom="5dp"/>
+
+
+                    <TextView
+                        android:layout_marginBottom="5dp"
+                        android:textSize="16sp"
+                        android:textColor="@color/primaryColor"
+                        android:text="Lunes a viernes"
+                        android:textStyle="bold"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                    <TextView
+                        android:id="@+id/txtHorarioLunes_Viernes"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/primaryLightColor"
+                        android:text="8:00 AM - 6:00 PM"
+                        android:textSize="16sp"/>
                 <TextView
-                    android:id="@+id/txtHorarioLunes_Viernes"
+                    android:layout_marginBottom="5dp"
+                    android:textSize="16sp"
+                    android:textColor="@color/primaryColor"
+                    android:text="Sábado"
+                    android:textStyle="bold"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/primaryLightColor"
-                    android:text="Lunes a Viernes: "
-                    android:textSize="18sp"/>
+                    android:layout_height="wrap_content" />
                 <TextView
                     android:id="@+id/txtHorarioSabado"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@color/primaryLightColor"
-                    android:text="Sábado: "
-                    android:textSize="18sp"/>
+                    android:text="8:00 AM - 3:00 PM"
+                    android:textSize="16sp"/>
+
+                <TextView
+                    android:layout_marginBottom="5dp"
+                    android:textSize="16sp"
+                    android:textColor="@color/primaryColor"
+                    android:text="Domingo"
+                    android:textStyle="bold"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
                 <TextView
                     android:id="@+id/txtHorarioDomingo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@color/primaryLightColor"
-                    android:text="Domingo: "
-                    android:textSize="18sp"/>
-
+                    android:text="8:00 AM - 12:00 MD"
+                    android:textSize="16sp"/>
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
@@ -354,4 +380,13 @@
 
     </LinearLayout>
     </ScrollView>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/btnEditContact"
+        android:src="@drawable/ic_edit"
+        android:layout_gravity="bottom|end"
+        android:tint="@color/primaryColor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp" />
 </android.support.design.widget.CoordinatorLayout>
