--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Fragment.DetailsFragment">
+    tools:context=".Fragment.DetailsFragment"
+    android:id="@+id/frm_details_layout"
+    >
 
     <android.support.v7.widget.CardView
+        android:layout_gravity="center"
         android:layout_margin="5dp"
         android:layout_centerVertical="true"
         android:layout_width="match_parent"
@@ -30,7 +33,7 @@
                 android:gravity="center"
                 android:layout_marginBottom="5dp"/>
             <ImageView
-                android:src="@drawable/service3"
+                android:src="@drawable/ic_product"
                 android:layout_margin="5dp"
                 android:id="@+id/imgDetalleItem"
                 android:layout_width="match_parent"
@@ -62,20 +65,35 @@
                 android:text="informacion"
                 android:gravity="center"
                 android:textSize="18sp"/>
-            <Button
-                android:id="@+id/btnDetallesEditar"
-                android:layout_width="164dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:text="Editar"
-                android:textSize="16sp"
-                android:background="@drawable/button_fondo"
-                android:textColor="@drawable/button_texto"
-                android:textStyle="bold" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:layout_alignParentStart="true"
+                    android:id="@+id/btnDetallesBorrar"
+                    android:layout_width="164dp"
+                    android:layout_height="40dp"
+                    android:text="Borrar"
+                    android:textSize="16sp"
+                    android:background="@drawable/button_fondo"
+                    android:textColor="@drawable/button_texto"
+                    android:textStyle="bold" />
+
+                <Button
+                    android:layout_alignParentEnd="true"
+                    android:id="@+id/btnDetallesEditar"
+                    android:layout_width="164dp"
+                    android:layout_height="40dp"
+                    android:text="Editar"
+                    android:textSize="16sp"
+                    android:background="@drawable/button_fondo"
+                    android:textColor="@drawable/button_texto"
+                    android:textStyle="bold" />
+
+            </RelativeLayout>
+
         </LinearLayout>
     </android.support.v7.widget.CardView>
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
