--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -35,7 +36,7 @@
                 android:gravity="center"
                 android:layout_marginBottom="5dp"/>
             <ImageView
-                android:src="@drawable/ic_product"
+                app:srcCompat="@drawable/ic_product"
                 android:layout_margin="5dp"
                 android:id="@+id/imgEditElemento"
                 android:layout_width="match_parent"
