--- a/app/src/main/res/layout/fragment_edit_contact.xml
+++ b/app/src/main/res/layout/fragment_edit_contact.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -192,7 +193,7 @@
                         <ImageView
                             android:layout_width="50dp"
                             android:layout_height="50dp"
-                            android:src="@drawable/ic_whatsapp" />
+                            app:srcCompat="@drawable/ic_whatsapp" />
                         <LinearLayout
                             android:orientation="vertical"
                             android:layout_width="match_parent"
@@ -229,7 +230,7 @@
                         <ImageView
                             android:layout_width="50dp"
                             android:layout_height="50dp"
-                            android:src="@drawable/ic_facebook" />
+                            app:srcCompat="@drawable/ic_facebook" />
                         <LinearLayout
                             android:orientation="vertical"
                             android:layout_width="match_parent"
@@ -266,7 +267,7 @@
                         <ImageView
                             android:layout_width="50dp"
                             android:layout_height="50dp"
-                            android:src="@drawable/ic_instagram" />
+                            app:srcCompat="@drawable/ic_instagram" />
                         <LinearLayout
                             android:orientation="vertical"
                             android:layout_width="match_parent"
@@ -297,7 +298,7 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/btnSaveContact"
-        android:src="@drawable/ic_save"
+        app:srcCompat="@drawable/ic_save"
         android:layout_gravity="bottom|end"
         android:tint="@color/primaryColor"
         android:layout_width="wrap_content"
