--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,7 +12,7 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/btnAddPromocion"
-        android:src="@drawable/ic_add"
+        app:srcCompat="@drawable/ic_add"
         android:layout_gravity="bottom|end"
         android:tint="@color/primaryColor"
         android:layout_width="wrap_content"
