--- a/app/src/main/res/layout/info_windows_layout.xml
+++ b/app/src/main/res/layout/info_windows_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:paddingTop="5dp"
@@ -12,7 +13,7 @@
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/ic_hair_logo" />
+        app:srcCompat="@drawable/ic_hair_logo" />
     <TextView
         android:textSize="16sp"
         android:textStyle="bold"
