--- a/app/src/main/res/layout/item_servicio.xml
+++ b/app/src/main/res/layout/item_servicio.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <ImageView
-                android:src="@drawable/ic_hair_logo"
+                app:srcCompat="@drawable/ic_hair_logo"
                 android:layout_margin="5dp"
                 android:id="@+id/imgServicioItem"
                 android:layout_width="120dp"
@@ -26,18 +26,14 @@
             <LinearLayout
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
-                android:weightSum="3"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
                 <TextView
                     android:textColor="@color/primaryColor"
-                    android:layout_weight="1"
                     android:id="@+id/txtNombreServicio"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:paddingTop="5dp"
                     android:text="Nombre"
                     android:textStyle="bold"
                     style="@android:style/TextAppearance.Medium" />
@@ -48,23 +44,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:lines="2"
-                    android:maxLines="2"
-                    android:layout_marginTop="5dp"
-                    android:paddingTop="5dp"
                     android:text="Descripcion"
-                    style="@android:style/TextAppearance.Small"
-                    />
+                    style="@android:style/TextAppearance.Small" />
                 <TextView
                     android:textColor="@android:color/holo_green_dark"
-                    android:layout_weight="1"
                     android:id="@+id/txtPrecioServicio"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:paddingTop="5dp"
                     android:text="Precio"
-                    style="@android:style/TextAppearance.Medium"
-                    />
+                    style="@android:style/TextAppearance.Medium" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
